# jgd-rs

./: .gitignore  README.md  cargo-publish.sh  cargo.toml
examples/: customers-orders.jgd  depth-index.jgd  user-post-entities-custom-keys.jgd  user-post-entities.jgd
jgd-lib/: Cargo.toml  README.md
jgd-lib/examples/: array-object-root.jgd  ranged-array-object-root.jgd  single-object-root.jgd  user-post-entities.jgd
jgd-lib/schema/: jgd.schema.json
jgd-lib/src/: lib.rs
jgd-lib/src/fake/: fake_generator.rs  fake_keys.rs  fake_locale_generator.rs  mod.rs
jgd-lib/src/type_spec/: array_spec.rs  count.rs  entity.rs  field.rs  jgd.rs  len.rs  mod.rs  number_spec.rs  optional_spec.rs  root_entity.rs
jgd-lib/src/type_spec/utils/: generator_config.rs  replacer.rs
jgd-rs/: Cargo.toml  README.md
jgd-rs-cli/: Cargo.toml  LICENSE  README.md
jgd-rs-cli/src/: main.rs
jgd-rs/src/: lib.rs  locales_keys.rs
jgd-rs/src/fake/: fake_generator.rs  fake_keys.rs  fake_locale_generator.rs
jgd-rs/src/type_spec/: array_spec.rs  count.rs  entity.rs  field.rs  jgd.rs  mod.rs  number_spec.rs  optional_spec.rs
jgd-rs/src/type_spec/utils/: arguments.rs  generator_config.rs  jdg_global_config.rs  jgd_generator_error.rs  jgd_global_config.rs  key_parser.rs  local_config.rs  mod.rs  replacer.rs
jgd.js/: .gitignore  PROJECT_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  debug-template.ts  demo.ts  jest.config.js  package-lock.json  package.json  test-examples.ts  test-generation.js  test-merged-entity.js  test-template.ts  tsconfig.json
jgd.js/__tests__/: jgd.test.ts
jgd.js/examples/: customers-orders.jgd  single-user.jgd  users-and-posts.jgd
jgd.js/src/: arguments.ts  array-spec.ts  config.ts  entity-generator.ts  field-generator.ts  index.ts  jgd.ts  keys.ts  locales-keys.ts  number-spec.ts  optional-spec.ts  replacer.ts  template.ts  types.ts  utils.ts
jgd.js/src/fake/: fake-keys.ts  mod.ts
jgd.js/src/type-spec/: array-spec.ts  count.ts  entity-spec.ts  entity.ts  field.ts  index.ts  jgd-schema.ts  jgd.ts  mod.ts  number-spec.ts  optional-spec.ts
jgd.js/src/utils/: arguments.ts  generator-utils.ts  index.ts  replacer.ts
schema/: jgd.schema.json
