[package]
name = "jgd-rs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
jgd-rs = {path = "../jgd-rs"}
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
clap = { version = "4.5.43", features = ["derive"] }
fake = { version = "4.4.0", features = ["derive", "uuid", "ulid", "chrono"] }
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
ulid = "1.2.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
