[package]
name = "jgd-rs-cli"
version = "0.1.1"
edition = "2021"
description = "Command-line tool for generating JSON data from JGD (JSON Generator Definition) schema files"
license = "MIT"
authors = ["lvendrame"]
repository = "https://github.com/lvendrame/jgd-rs"
homepage = "https://github.com/lvendrame/jgd-rs"
documentation = "https://docs.rs/jgd-rs-cli"
readme = "README.md"
keywords = ["json", "generator", "cli", "fake", "data"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "jgd-rs-cli"
path = "src/main.rs"

[dependencies]
jgd-rs = { path = "../jgd-rs", version = "0.1.1" }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
clap = { version = "4.5.43", features = ["derive"] }
fake = { version = "4.4.0", features = ["derive", "uuid", "ulid", "chrono"] }
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
ulid = "1.2.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
