[package]
name = "jgd-rs-cli"
version = "0.2.1"
edition = "2021"
description = "Command-line tool for generating JSON data from JGD (JSON Generator Definition) schema files"
license = "MIT"
authors = ["lvendrame"]
repository = "https://github.com/lvendrame/jgd-rs"
homepage = "https://github.com/lvendrame/jgd-rs/jgd-rs-cli/"
documentation = "https://docs.rs/jgd-rs-cli"
readme = "README.md"
keywords = ["json", "generator", "cli", "fake", "data"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "jgd-rs-cli"
path = "src/main.rs"

[dependencies]
jgd-rs = { path = "../jgd-rs", version = "0.2.1" }
clap = { version = "4.5.43", features = ["derive"] }
serde_json = "1.0.142"
