[package]
name = "jgd-rs"
version = "0.1.1"
edition = "2021"
description = "A powerful Rust library for generating realistic JSON data using declarative schema definitions"
license = "MIT"
authors = ["lvendrame"]
repository = "https://github.com/lvendrame/jgd-rs"
homepage = "https://github.com/lvendrame/jgd-rs"
documentation = "https://docs.rs/jgd-rs"
readme = "README.md"
keywords = ["json", "generator", "fake", "data", "testing"]
categories = ["development-tools::testing", "data-structures"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
fake = { version = "4.4.0", features = ["derive", "uuid", "ulid", "chrono", "random_color", "time"] }
indexmap = { version = "2.6.0", features = ["serde"] }
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"]}
time = "0.3.41"
ulid = "1.2.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
